[project]
name = "komitas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "itsdangerous>=2.2.0",
    "livereload>=2.7.1",
    "pydantic>=2.12.3",
    "sqlmodel>=0.0.27",
    "starlette>=0.48.0",
    "starlit>=0.1.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
komitas = "komitas:main"
rserver = "komitas:rserver"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
